# vkstarter

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
vkstarter/: ai.py  db.py  main.py
vkstarter/ai/: __init__.py  deepseek.py  gpt.py  main.py
vkstarter/model/: atom.py  data.py  handler.py  head.py  linked.py  record.py  struct.py  tail.py  tree.py
vkstarter/routers/: __init__.py  note.py
