[tool.poetry]
name = "vkstarter"
version = "0.1.0"
description = ""
authors = ["Mher Alaverdyan"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["standard"], version = "^0.115.6"}
pydantic = "^2.10.5"
sqlmodel = "^0.0.22"
langchain-openai = "^0.3.2"
langchain-core = "^0.3.31"
sqlalchemy = "^2.0.37"

[tool.pyright]
reportImportCycles = "warning"
reportUnusedImport = "warning"
reportUnusedClass = "warning"
reportUnusedFunction = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "warning"
reportUntypedClassDecorator = "warning"
reportUntypedFunctionDecorator = "warning"
reportUntypedBaseClass = "warning"
reportUntypedNamedTuple = "warning"
reportPrivateUsage = "warning"
reportUninitializedInstanceVariable = "error"
reportUnknownParameterType = "warning"
reportUnknownArgumentType = "warning"
reportUnknownVariableType = "warning"
reportUnknownLambdaType = "warning"
reportMissingParameterType = "warning"
reportMissingTypeArgument = "warning"
reportMissingTypeStubs = "warning"
reportMissingReturnType = "warning"
reportCallInDefaultInitializer = "warning"
reportUnnecessaryIsInstance = "information"
reportUnnecessaryCast = "information"
reportUnnecessaryComparison = "information"
reportUnnecessaryContains = "information"
reportUnusedCallResult = "warning"
reportUnusedExpression = "warning"
reportUnnecessaryTypeIgnoreComment = "information"
reportImplicitOverride = "warning"
reportShadowedImports = "warning"
stubPaths = ["./typings"]

[tool.ruff]
line-length = 120
indent-width = 2

[tool.ruff.lint]
select = ["E", "W", "I", "N", "D", "NPY", "DOC"]
ignore = ["D100", "D204", "D212", "D300", "D400"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["D"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
